objects/CommandCenter__Validation_Reivew_Job__c.object
<CustomObject>
    <fields>
        <fullName>CommandCenter__Build_Number__c</fullName>
        <label>Build Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Repository_Name__c</fullName>
        <label>Repository Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__SourceCommitId__c</fullName>
        <label>SourceCommitId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Validation_Reivew_Job</label>
    <nameField>
        <label>Validation_Reivew_Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Validation_Reivew_Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>